--- a/TSP/Testing/Testing.csproj
+++ b/TSP/Testing/Testing.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TSPLibrary\TSPLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
