--- a/TSP/TSPLibrary/TSPLibrary.csproj
+++ b/TSP/TSPLibrary/TSPLibrary.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="TSPLib.Net" Version="1.1.6" />
+  </ItemGroup>
+
 </Project>
