further improvements, updated ui with data generation button

--- a/TSP/TSPWinForms/TSPWinForms.csproj
+++ b/TSP/TSPWinForms/TSPWinForms.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="7.0.4" />
     <PackageReference Include="ScottPlot.WinForms" Version="4.1.69" />
   </ItemGroup>
 
